# haskgo

./: CONTRIBUTORS  Dockerfile  LICENSE  README.md  haskgo.cabal
src/: Base.hs  Group.hs  Liveness.hs  Random.hs  main.hs
