name:           haskgo
description:    "Go player"
version:        0.1.0
cabal-version:  >= 1.8
build-type:     Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

executable          haskgo
    hs-source-dirs: src
    main-is:        main.hs
    other-modules:  Base

    build-depends:  base, vector, transformers, unordered-containers

                    -- debug dependencies
                    , hood

    extensions:     
                    OverloadedStrings

    if flag(dev)
        ghc-options: -prof -fprof-auto +RTS -xc
